--- a/app/Vagrantfile
+++ b/app/Vagrantfile
@@ -22,6 +22,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.cpus = 2
   end
 
-  config.vm.provision :shell, :inline => "sudo apt-get -y install git; cd ~; git clone https://github.com/bp2014n2/i2b2.git; cd i2b2; sudo ./setup.sh core web;", privileged: false
+  config.vm.provision :shell, :inline => "sudo apt-get -y install git; cd ~; git clone https://github.com/bp2014n2/i2b2.git;", privileged: false
+  config.vm.provision "file", source: "env.properties", destination: "~/i2b2/env.properties"
+  config.vm.provision :shell, :inline => "cd ~/i2b2; sudo ./setup.sh core web;", privileged: false
   config.vm.provision :shell, :inline => "echo \"Machine reachable via `ifconfig eth1 | grep 'inet addr:' | cut -d: -f2| cut -d' ' -f1`\"", privileged: false
 end
