--- a/postgresql/Vagrantfile
+++ b/postgresql/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.box = "i2b2db"
 
-  config.vm.network "public_network"
+  config.vm.network "private_network", type: "dhcp"
 
   config.vm.hostname = "i2b2db"
 
@@ -22,5 +22,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.cpus = 2
   end
 
-  config.vm.provision :shell, :inline => "echo 'comming soon';", privileged: false
+  config.vm.provision :shell, :inline => "sudo apt-get -y install git; cd ~; git clone https://github.com/bp2014n2/i2b2-db.git;", privileged: false
+  config.vm.provision :shell, :inline => "cd ~/i2b2-db; sudo ./setup_db.sh;", privileged: false
+  config.vm.provision :shell, :inline => "echo \"host    all             all             0.0.0.0/0                md5\" >> /etc/postgresql/9.4/main/pg_hba.conf; sed \"s/#listen_addresses = 'localhost'/listen_addresses = '\\*'/g\" /etc/postgresql/9.4/main/postgresql.conf -i; /etc/init.d/postgresql restart;"
+  config.vm.provision :shell, :inline => "echo \"Machine reachable via `ifconfig eth1 | grep 'inet addr:' | cut -d: -f2| cut -d' ' -f1`\"", privileged: false
 end
