--- a/hpcc/Vagrantfile
+++ b/hpcc/Vagrantfile
@@ -5,23 +5,29 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  
-  config.vm.define "master" do |master|
+
+  config.ssh.username = "ubuntu"
+
+  config.vm.box_url = "http://54.93.194.56/vagrant/i2b2db.box"
+
+  config.vm.box = "i2b2db"
+
+  config.vm.network "private_network", type: "dhcp"
+
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 2048
+    vb.cpus = 1
+  end
+
+  config.vm.define "master", primary: true do |master|
     
-    master.ssh.username = "ubuntu"
-
-    master.vm.box_url = "http://54.93.194.56/vagrant/i2b2db.box"
-
-    master.vm.box = "i2b2db"
-
-    master.vm.network "private_network", type: "dhcp"
-
     master.vm.hostname = "i2b2hpccm"
+
+    master.vm.network "forwarded_port", guest: 8010, host: 8010
+    master.vm.network "forwarded_port", guest: 8015, host: 8015
 
     master.vm.provider "virtualbox" do |vb|
       vb.name = "i2b2hpccm"
-      vb.memory = 2048
-      vb.cpus = 1
     end
 
     master.vm.provision "shell", path: "setup.sh"
@@ -29,44 +35,24 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   end
 
-  config.vm.define "worker1" do |worker|
+  config.vm.define "worker1", autostart: false do |worker|
     
-    worker.ssh.username = "ubuntu"
-
-    worker.vm.box_url = "http://54.93.194.56/vagrant/i2b2db.box"
-
-    worker.vm.box = "i2b2db"
-
-    worker.vm.network "private_network", type: "dhcp"
-
     worker.vm.hostname = "i2b2hpccw1"
 
     worker.vm.provider "virtualbox" do |vb|
       vb.name = "i2b2hpccw1"
-      vb.memory = 2048
-      vb.cpus = 1
     end
 
     worker.vm.provision :shell, :inline => "echo \"Machine reachable via `ifconfig eth1 | grep 'inet addr:' | cut -d: -f2| cut -d' ' -f1`\"", privileged: false
 
   end
 
-  config.vm.define "worker2" do |worker|
+  config.vm.define "worker2", autostart: false do |worker|
     
-    worker.ssh.username = "ubuntu"
-
-    worker.vm.box_url = "http://54.93.194.56/vagrant/i2b2db.box"
-
-    worker.vm.box = "i2b2db"
-
-    worker.vm.network "private_network", type: "dhcp"
-
     worker.vm.hostname = "i2b2hpccw2"
 
     worker.vm.provider "virtualbox" do |vb|
       vb.name = "i2b2hpccw2"
-      vb.memory = 2048
-      vb.cpus = 1
     end
 
     worker.vm.provision :shell, :inline => "echo \"Machine reachable via `ifconfig eth1 | grep 'inet addr:' | cut -d: -f2| cut -d' ' -f1`\"", privileged: false
