--- a/postgresql/Vagrantfile
+++ b/postgresql/Vagrantfile
@@ -14,6 +14,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.network "private_network", type: "dhcp"
 
+  config.vm.network "forwarded_port", guest: 5432, host: 5432
+
   config.vm.hostname = "i2b2db"
 
   config.vm.provider "virtualbox" do |vb|
